Title(fix):修复选择本地文件后，url转URL报错的问题。现在的IDEA通过选择空间返回的String为绝对路径，不包含scheme前缀。 Cause：所以进行new URL("D:/837C2720B021D8BA0D59D128D66D5451.jpg")时报错，报错：java.net.MalformedURLException: unknown protocol: d Solution：通过File进行一次转换。 Effect: N/A Reviewer: N/A 附加说明：N/A